--- a/index.html
+++ b/index.html
@@ -11,68 +11,127 @@
       href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap"
       rel="stylesheet"
     />
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
+    <!-- Materi Modal -->
+    <div class="modal-container" id="materi-modal">
+      <div class="modal-content-container">
+        <div class="px-5 text-center">
+          <h1>Materi</h1>
+          <p id="judul"></p>
+          <div id="content"></div>
+        </div>
+        <div class="block text-center">
+          <div>
+            <button class="btn btn-success" onclick="bacaMatericlose()">
+              Kembali
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Salah Modal -->
     <div class="modal-container" id="salah-modal">
       <div class="modal-content-container">
-        <h1>belajar terlebih dahulu ya</h1>
-        <p id="judul"></p>
-        <p id="content"></p>
-        <div class="modal-button-container">
-          <button onclick="backModal()">
-            <img
-              src="https://www.kindpng.com/picc/m/11-116664_computer-back-icon-left-right-arrow-cartoon-public.png"
-              alt=""
-              width="20px"
-            />
-            Kembali
-          </button>
+        <div class="px-5 text-center">
+          <h1>belajar terlebih dahulu ya</h1>
+          <p id="judul"></p>
+          <div id="content"></div>
+        </div>
+        <div class="block text-center">
+          <div>
+            <button class="btn btn-success" onclick="bacaMateri()">
+              Baca Materi
+            </button>
+          </div>
+          <div>
+            <button class="btn btn-success" onclick="backModal()">
+              Kembali
+            </button>
+          </div>
         </div>
       </div>
     </div>
 
     <!-- Benar Modal -->
-    <div class="modal-container" id="benar-modal">
-      <div class="modal-content-container">
-        <h1>Jawaban Benar Selamat</h1>
-        <p>Naik ke level <span id="levelModal"></span> ?</p>
-        <div class="modal-button-container">
-          <button onclick="nextModal()">Lanjut</button>
+    <div class="" style="padding: 0px 400px">
+      <div class="modal-container" id="benar-modal">
+        <div class="modal-content-container">
+          <h1>Jawaban Benar Selamat</h1>
+          <p>Naik ke level <span id="levelModal"></span> ?</p>
+          <div class="">
+            <button class="btn btn-success" onclick="nextModal()">
+              Lanjut
+            </button>
+          </div>
         </div>
       </div>
     </div>
 
     <!-- Benar Modal -->
+
     <div class="modal-container" id="end-modal">
       <div class="modal-content-container">
         <h1>Jawaban Benar ,Quiz Selesai</h1>
 
         <p id="skor"></p>
-        <div class="modal-button-container">
-          <button onclick="endModal()">Reload</button>
+        <div class="">
+          <button class="btn btn-success" onclick="endModal()">Reload</button>
         </div>
       </div>
     </div>
 
-    <div id="quiz-container" class="container">
-      <div class="">
+    <div
+      id="quiz-container"
+      class="max-w-full h-screen flex justify-center items-center"
+    >
+      <div
+        class="w-[90%] h-[95%] flex justify-center items-center mx-auto text-center overflow-hidden"
+      >
         <div>
-          <p>Level</p>
-          <p id="level"></p>
-        </div>
-        <div class="quiz-wrapper">
-          <img id="image" src="" alt="" width="200px" />
-          <p id="question" style="text-align: center"></p>
-          <div class="btn-section">
-            <button id="choice1" class="btn-answer">Choice 1</button>
-            <button id="choice2" class="btn-answer">Choice 2</button>
+          <div class="flex justify-center items-center mb-2">
+            <img src="./img/bitmap.png" class="w-[80px]" />
           </div>
-          <p id="result"></p>
+          <div
+            class="flex justify-center items-center bg-slate-100 mx-auto w-[70%] py-[20px] rounded-2xl mb-3"
+          >
+            <div class="text-center">
+              <div class="flex justify-center items-center">
+                <div
+                  class="w-[270px] h-[180px] rounded-2xl overflow-hidden object-cover mb-2"
+                >
+                  <img id="image" src="" class="h-[100%] w-[100%]" />
+                </div>
+              </div>
+              <div class="mb-1 flex justify-center items-center">
+                <span class="mr-1">level</span>
+                <p id="level"></p>
+              </div>
+              <div
+                class="text-center text-[18px] px-3 font-bold"
+                id="question"
+              ></div>
+            </div>
+          </div>
+          <div class="flex justify-center items-center">
+            <div>
+              <button
+                id="choice1"
+                class="px-[55px] py-[8px] bg-green-500 rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[20px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110 mb-2"
+              ></button>
+              <button
+                id="choice2"
+                class="px-[55px] py-[8px] bg-green-500 rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[20px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110"
+              ></button>
+            </div>
+            <p id="result"></p>
+          </div>
         </div>
       </div>
     </div>
 
+    <!-- <script src="tailwind.config.js"></script> -->
     <script src="personal.js"></script>
   </body>
 </html>
