--- a/index.html
+++ b/index.html
@@ -18,13 +18,19 @@
     <div class="modal-container" id="materi-modal">
       <div class="modal-content-container">
         <div class="px-5 text-center">
-          <h1>Materi</h1>
-          <p id="judul"></p>
-          <div id="content"></div>
+          <p id="judul" class="text-white font-black text-[45px] leading-9"></p>
+          <div
+            class="overflow-y-auto w-[400px] h-[300px] bg-white p-5 rounded-xl my-[10px]"
+          >
+            <p id="content"></p>
+          </div>
         </div>
         <div class="block text-center">
           <div>
-            <button class="btn btn-success" onclick="bacaMatericlose()">
+            <button
+              onclick="bacaMatericlose()"
+              class="px-[55px] py-[8px] rounded-full shadow-md shadow-slate-900 border-4 border-slate-300 text-dark font-black text-[20px] bg-white transform transition-all duration-150 hover:scale-110 mb-2"
+            >
               Kembali
             </button>
           </div>
@@ -34,19 +40,26 @@
     <!-- Salah Modal -->
     <div class="modal-container" id="salah-modal">
       <div class="modal-content-container">
-        <div class="px-5 text-center">
-          <h1>belajar terlebih dahulu ya</h1>
-          <p id="judul"></p>
-          <div id="content"></div>
+        <div class="flex justify-center items-center mb-2">
+          <img src="./img/bitmap.png" class="w-[80px]" />
+        </div>
+        <div class="mt-2">
+          <img src="./img/salah.png" alt="" class="animasi-bounce2" />
         </div>
         <div class="block text-center">
           <div>
-            <button class="btn btn-success" onclick="bacaMateri()">
+            <button
+              onclick="bacaMateri()"
+              class="px-[55px] py-[8px] rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[20px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110 mb-2"
+            >
               Baca Materi
             </button>
           </div>
           <div>
-            <button class="btn btn-success" onclick="backModal()">
+            <button
+              onclick="backModal()"
+              class="px-[55px] py-[8px] rounded-full shadow-md shadow-slate-900 border-4 border-slate-300 text-dark font-black text-[20px] bg-white transform transition-all duration-150 hover:scale-110 mb-2"
+            >
               Kembali
             </button>
           </div>
@@ -58,10 +71,20 @@
     <div class="" style="padding: 0px 400px">
       <div class="modal-container" id="benar-modal">
         <div class="modal-content-container">
-          <h1>Jawaban Benar Selamat</h1>
-          <p>Naik ke level <span id="levelModal"></span> ?</p>
+          <div class="flex justify-center items-center mb-2">
+            <img src="./img/bitmap.png" class="w-[80px]" />
+          </div>
+          <div class="mt-2">
+            <img src="./img/benar.png" alt="" class="animasi-bounce2" />
+          </div>
+          <p class="font-black text-white text-[20px]">
+            Naik ke level <span id="levelModal"></span> ?
+          </p>
           <div class="">
-            <button class="btn btn-success" onclick="nextModal()">
+            <button
+              onclick="nextModal()"
+              class="px-[55px] py-[8px] rounded-full shadow-md shadow-slate-900 border-4 border-slate-300 text-dark font-black text-[20px] bg-white transform transition-all duration-150 hover:scale-110 mb-2"
+            >
               Lanjut
             </button>
           </div>
@@ -69,22 +92,33 @@
       </div>
     </div>
 
-    <!-- Benar Modal -->
+    <!-- end Modal -->
 
     <div class="modal-container" id="end-modal">
       <div class="modal-content-container">
-        <h1>Jawaban Benar ,Quiz Selesai</h1>
+        <div class="flex justify-center items-center mb-2">
+          <img src="./img/bitmap.png" class="w-[80px]" />
+        </div>
+        <div class="mt-2">
+          <img src="./img/skor.png" alt="" class="animasi-bounce2" />
+        </div>
 
-        <p id="skor"></p>
+        <p id="skor" class="text-white font-black text-[60px]"></p>
         <div class="">
-          <button class="btn btn-success" onclick="endModal()">Reload</button>
+          <button
+            onclick="endModal()"
+            class="px-[55px] py-[8px] rounded-full shadow-md shadow-slate-900 border-4 border-slate-300 text-dark font-black text-[20px] bg-white transform transition-all duration-150 hover:scale-110 mb-2"
+          >
+            Kembali
+          </button>
         </div>
       </div>
     </div>
 
+    <!-- Start COntent -->
     <div
       id="quiz-container"
-      class="max-w-full h-screen flex justify-center items-center"
+      class="max-w-full h-screen flex justify-center items-center bg-personal"
     >
       <div
         class="w-[90%] h-[95%] flex justify-center items-center mx-auto text-center overflow-hidden"
@@ -118,11 +152,11 @@
             <div>
               <button
                 id="choice1"
-                class="px-[55px] py-[8px] bg-green-500 rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[20px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110 mb-2"
+                class="px-[55px] py-[8px] rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[20px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110 mb-2"
               ></button>
               <button
                 id="choice2"
-                class="px-[55px] py-[8px] bg-green-500 rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[20px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110"
+                class="px-[55px] py-[8px] rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[20px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110"
               ></button>
             </div>
             <p id="result"></p>
@@ -131,7 +165,7 @@
       </div>
     </div>
 
-    <!-- <script src="tailwind.config.js"></script> -->
+    <script src="tailwind.config.js"></script>
     <script src="personal.js"></script>
   </body>
 </html>
