--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="px-5 text-center">
           <p id="judul" class="text-white font-black text-[45px] leading-9"></p>
           <div
-            class="overflow-y-auto w-[400px] h-[300px] bg-white p-5 rounded-xl my-[10px]"
+            class="overflow-y-auto w-[400px] md:w-[600px] h-[300px] bg-white p-5 rounded-xl my-[10px]"
           >
             <p id="content"></p>
           </div>
@@ -37,6 +37,7 @@
         </div>
       </div>
     </div>
+
     <!-- Salah Modal -->
     <div class="modal-container" id="salah-modal">
       <div class="modal-content-container">
@@ -77,7 +78,7 @@
           <div class="mt-2">
             <img src="./img/benar.png" alt="" class="animasi-bounce2" />
           </div>
-          <p class="font-black text-white text-[20px]">
+          <p class="font-black text-white md:text-black text-[20px]">
             Naik ke level <span id="levelModal"></span> ?
           </p>
           <div class="">
@@ -103,7 +104,10 @@
           <img src="./img/skor.png" alt="" class="animasi-bounce2" />
         </div>
 
-        <p id="skor" class="text-white font-black text-[60px]"></p>
+        <p
+          id="skor"
+          class="text-white md:text-black font-black text-[60px]"
+        ></p>
         <div class="">
           <button
             onclick="endModal()"
@@ -133,7 +137,7 @@
             <div class="text-center">
               <div class="flex justify-center items-center">
                 <div
-                  class="w-[270px] h-[180px] rounded-2xl overflow-hidden object-cover mb-2"
+                  class="w-[90%] h-[180px] rounded-2xl overflow-hidden object-cover mb-2"
                 >
                   <img id="image" src="" class="h-[100%] w-[100%]" />
                 </div>
@@ -152,7 +156,7 @@
             <div>
               <button
                 id="choice1"
-                class="px-[55px] py-[8px] rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[20px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110 mb-2"
+                class="px-[55px] py-[8px] rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[20px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110 mb-2 disabled:bg-gradient-to-t disabled:from-red-600 disabled:to-red-300"
               ></button>
               <button
                 id="choice2"
