--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
             <img src="./img/bitmap.png" class="w-[80px]" />
           </div>
           <div
-            class="flex justify-center items-center bg-slate-100 mx-auto w-[70%] py-[20px] rounded-2xl mb-3"
+            class="flex justify-center items-center bg-slate-100 mx-auto w-[100%] h-[390px] py-[10px] rounded-2xl mb-3"
           >
             <div class="text-center">
               <div class="flex justify-center items-center">
                 <div
-                  class="w-[90%] h-[180px] rounded-2xl overflow-hidden object-cover mb-2"
+                  class="w-[100%] h-[180px] rounded-2xl overflow-hidden object-cover mb-2"
                 >
                   <img id="image" src="" class="h-[100%] w-[100%]" />
                 </div>
@@ -160,7 +160,7 @@
               ></button>
               <button
                 id="choice2"
-                class="px-[55px] py-[8px] rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[20px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110"
+                class="px-[55px] py-[8px] rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[20px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110 disabled:bg-gradient-to-t disabled:from-red-600 disabled:to-red-300"
               ></button>
             </div>
             <p id="result"></p>
