--- a/index.html
+++ b/index.html
@@ -132,14 +132,18 @@
             <img src="./img/bitmap.png" class="w-[80px]" />
           </div>
           <div
-            class="flex justify-center items-center bg-slate-100 mx-auto w-[100%] h-[390px] py-[10px] rounded-2xl mb-3"
+            class="flex justify-center items-center bg-slate-100 mx-auto w-[100%] h-[500px] py-[10px] rounded-2xl mb-3"
           >
             <div class="text-center">
               <div class="flex justify-center items-center">
                 <div
-                  class="w-[100%] h-[180px] rounded-2xl overflow-hidden object-cover mb-2"
+                  class="w-[100%] h-[280px] rounded-2xl overflow-hidden mb-2 object-cover flex justify-center items-center"
                 >
-                  <img id="image" src="" class="h-[100%] w-[100%]" />
+                  <img
+                    id="image"
+                    src=""
+                    class="h-[100%] w-[100%] object-cover"
+                  />
                 </div>
               </div>
               <div class="mb-1 flex justify-center items-center">
