--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <img src="./img/bitmap.png" class="w-[80px]" />
           </div>
           <div
-            class="flex justify-center items-center bg-slate-100 mx-auto w-[100%] h-[500px] py-[10px] rounded-2xl mb-3"
+            class="flex justify-center items-center bg-slate-100 mx-auto w-[100%] h-[500px] rounded-2xl mb-3"
           >
             <div class="text-center">
               <div class="flex justify-center items-center">
