--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
           <div
             class="flex justify-center items-center bg-slate-100 mx-auto w-[100%] h-[500px] rounded-2xl mb-3"
           >
-            <div class="text-center relative">
+            <div class="text-center">
               <div class="flex justify-center items-center">
                 <div
-                  class="w-[100%] h-[280px] overflow-hidden top-0 object-cover flex justify-center items-center absolute"
+                  class="w-[100%] h-[280px] overflow-hidden top-0 object-cover flex justify-center items-center"
                 >
                   <img
                     id="image"
