--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <img src="./img/bitmap.png" class="w-[80px]" />
           </div>
           <div
-            class="flex justify-center items-center bg-slate-100 mx-auto w-[100%] h-[auto] pb-8 rounded-2xl mb-3"
+            class="flex justify-center items-center bg-slate-100 mx-auto w-[100%] h-[auto] pb-8 rounded-2xl mb-3 overflow-hidden"
           >
             <div class="text-center">
               <div class="flex justify-center items-center">
@@ -146,7 +146,7 @@
                   />
                 </div>
               </div>
-              <div class="mb-1 flex justify-center items-center">
+              <div class="mb-1 flex mt-5 justify-center items-center">
                 <span class="mr-1">level</span>
                 <p id="level"></p>
               </div>
