--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       >
         <div>
           <div class="flex justify-center items-center mb-2">
-            <img src="./img/bitmap.png" class="w-[80px]" />
+            <img src="./img/bitmap.png" class="w-[100px] animasi-bounce2" />
           </div>
           <div
             class="flex justify-center items-center bg-slate-100 mx-auto w-[100%] h-[auto] pb-8 rounded-2xl mb-3 overflow-hidden"
@@ -156,7 +156,7 @@
               ></div>
             </div>
           </div>
-          <div class="flex justify-center items-center">
+          <div class="flex justify-center items-center mt-5">
             <div>
               <button
                 id="choice1"
