--- a/index.html
+++ b/index.html
@@ -17,12 +17,17 @@
     <!-- Materi Modal -->
     <div class="modal-container" id="materi-modal">
       <div class="modal-content-container">
-        <div class="px-5 text-center">
-          <p id="judul" class="text-white font-black text-[45px] leading-9"></p>
-          <div
-            class="overflow-y-auto w-[400px] md:w-[600px] h-[300px] bg-white p-5 rounded-xl my-[10px]"
-          >
-            <p id="content"></p>
+        <div class="px-5 text-center flex justify-center items-center">
+          <div>
+            <p
+              id="judul"
+              class="text-white font-black text-[30px] leading-9"
+            ></p>
+            <div
+              class="overflow-y-auto w-[100%] md:w-[600px] h-[500px] bg-white p-5 rounded-xl my-[10px]"
+            >
+              <p id="content"></p>
+            </div>
           </div>
         </div>
         <div class="block text-center">
@@ -142,7 +147,7 @@
                   <img
                     id="image"
                     src=""
-                    class="h-[100%] w-[100%] object-cover"
+                    class="h-[100%] w-[100%] md:w-[700px] object-cover"
                   />
                 </div>
               </div>
@@ -160,11 +165,11 @@
             <div>
               <button
                 id="choice1"
-                class="px-[55px] py-[8px] rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[20px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110 mb-2 disabled:bg-gradient-to-t disabled:from-red-600 disabled:to-red-300"
+                class="px-[55px] py-[8px] rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[20px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110 mb-2 disabled:bg-gradient-to-t disabled:from-red-600 disabled:to-red-300 md:mx-2"
               ></button>
               <button
                 id="choice2"
-                class="px-[55px] py-[8px] rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[20px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110 disabled:bg-gradient-to-t disabled:from-red-600 disabled:to-red-300"
+                class="px-[55px] py-[8px] rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[20px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110 disabled:bg-gradient-to-t disabled:from-red-600 disabled:to-red-300 md:mx-2"
               ></button>
             </div>
             <p id="result"></p>
