--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <!-- Materi Modal -->
     <div class="modal-container" id="materi-modal">
       <div class="modal-content-container">
-        <div class="p-5 text-center flex justify-center items-center">
-          <div>
+        <div class="text-center flex justify-center items-center">
+          <div class="p-5">
             <div
               id="judul"
               class="text-white font-black text-[25px] leading-9 w-[100%]"
             ></div>
             <div
-              class="overflow-y-auto w-[100%] md:w-[600px] h-[500px] bg-white p-5 rounded-xl my-[10px]"
+              class="overflow-y-auto w-[100%] md:w-[600px] h-[500px] bg-white p-5 rounded-xl my-[10px] mx-auto"
             >
               <div id="content"></div>
             </div>
