--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <div class="modal-container" id="materi-modal">
       <div class="modal-content-container">
         <div class="text-center flex justify-center items-center">
-          <div class="p-5">
+          <div class="px-3">
             <div
               id="judul"
               class="text-white font-black text-[25px] leading-9 w-[100%]"
             ></div>
             <div
-              class="overflow-y-auto w-[100%] md:w-[600px] h-[500px] bg-white p-5 rounded-xl my-[10px] mx-auto"
+              class="overflow-y-auto w-[400px] md:w-[600px] h-[500px] bg-white p-5 rounded-xl my-[10px] mx-auto"
             >
               <div id="content"></div>
             </div>
