--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
             <div>
               <button
                 id="choice1"
-                class="px-[55px] py-[8px] rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[20px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110 mb-2 disabled:bg-gradient-to-t disabled:from-red-600 disabled:to-red-300 md:mx-2"
+                class="px-[55px] py-[8px] rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[20px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110 mb-2 disabled:bg-gradient-to-t disabled:from-red-600 disabled:to-red-300 md:mx-2 animasi-scale"
               ></button>
               <button
                 id="choice2"
-                class="px-[55px] py-[8px] rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[20px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110 disabled:bg-gradient-to-t disabled:from-red-600 disabled:to-red-300 md:mx-2"
+                class="px-[55px] py-[8px] rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[20px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110 disabled:bg-gradient-to-t disabled:from-red-600 disabled:to-red-300 md:mx-2 animasi-scale"
               ></button>
             </div>
             <p id="result"></p>
