--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div
               class="overflow-y-auto w-[350px] md:w-[600px] h-[500px] md:h-[300px] bg-white p-5 rounded-xl my-[10px] mx-auto"
             >
-              <div id="content"></div>
+              <div id="content" style="text-align: justify"></div>
             </div>
           </div>
         </div>
