--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="text-center">
               <div class="flex justify-center items-center">
                 <div
-                  class="w-[100%] h-[280px] overflow-hidden top-0 object-cover flex justify-center items-center"
+                  class="w-[100%] h-[280px] md:h-[320px] overflow-hidden top-0 object-cover flex justify-center items-center"
                 >
                   <img
                     id="image"
