--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
           <div class="px-3">
             <div
               id="judul"
-              class="text-white md:text-black font-black text-[25px] leading-9 w-[100%]"
+              class="text-white font-black text-[25px] leading-9 w-[100%]"
             ></div>
             <div
-              class="overflow-y-auto w-[350px] md:w-[600px] h-[500px] md:h-[300px] bg-white p-5 rounded-xl my-[10px] mx-auto"
+              class="overflow-y-auto w-[350px] md:w-[400px] h-[500px] md:h-[300px] bg-white p-5 rounded-xl my-[10px] mx-auto"
             >
               <div id="content" style="text-align: justify"></div>
             </div>
@@ -83,7 +83,7 @@
           <div class="mt-2">
             <img src="./img/benar.png" alt="" class="animasi-bounce2" />
           </div>
-          <p class="font-black text-white md:text-black text-[20px]">
+          <p class="font-black text-white text-[20px]">
             Naik ke level <span id="levelModal"></span> ?
           </p>
           <div class="">
@@ -137,7 +137,7 @@
             <img src="./img/bitmap.png" class="w-[100px] animasi-bounce2" />
           </div>
           <div
-            class="flex justify-center items-center bg-slate-100 mx-auto w-[100%] h-[auto] pb-8 rounded-2xl mb-3 overflow-hidden md:border-2 md:border-slate-200"
+            class="flex justify-center items-center bg-slate-100 mx-auto w-[100%] md:w-[350px] h-[auto] pb-8 rounded-2xl mb-3 overflow-hidden md:border-2 md:border-slate-200"
           >
             <div class="text-center">
               <div class="flex justify-center items-center">
@@ -147,7 +147,7 @@
                   <img
                     id="image"
                     src=""
-                    class="h-[100%] w-[100%] md:w-[700px] object-cover"
+                    class="h-[100%] w-[100%] object-cover"
                   />
                 </div>
               </div>
