--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div>
             <button
               onclick="bacaMateri()"
-              class="px-[55px] py-[8px] rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[20px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110 mb-2"
+              class="px-[55px] py-[8px] rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[20px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110 mb-5"
             >
               Baca Materi
             </button>
@@ -109,10 +109,7 @@
           <img src="./img/skor.png" alt="" class="animasi-bounce2" />
         </div>
 
-        <p
-          id="skor"
-          class="text-white md:text-black font-black text-[60px]"
-        ></p>
+        <p id="skor" class="text-white font-black text-[60px]"></p>
         <div class="">
           <button
             onclick="endModal()"
@@ -134,45 +131,59 @@
       >
         <div>
           <div class="flex justify-center items-center mb-2">
-            <img src="./img/bitmap.png" class="w-[100px] animasi-bounce2" />
-          </div>
-          <div
-            class="flex justify-center items-center bg-slate-100 mx-auto w-[100%] md:w-[350px] h-[auto] pb-8 rounded-2xl mb-3 overflow-hidden md:border-2 md:border-slate-200"
-          >
             <div class="text-center">
-              <div class="flex justify-center items-center">
-                <div
-                  class="w-[100%] h-[280px] md:h-[240px] overflow-hidden top-0 object-cover flex justify-center items-center"
-                >
-                  <img
-                    id="image"
-                    src=""
-                    class="h-[100%] w-[100%] object-cover"
-                  />
-                </div>
-              </div>
-              <div class="mb-1 flex mt-5 justify-center items-center">
-                <span class="mr-1">level</span>
-                <p id="level"></p>
-              </div>
-              <div
-                class="text-center text-[18px] px-3 font-bold"
-                id="question"
-              ></div>
+              <img
+                src="./img/bitmap.png"
+                class="w-[105px] animasi-bounce2 mx-auto"
+              />
+              <button
+                id="start-button"
+                class="mt-[100px] px-[60px] py-[10px] rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[30px] md:text-[35px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110 mb-2 disabled:bg-gradient-to-t disabled:from-red-600 disabled:to-red-300 md:mx-2 animasi-scale"
+                onclick="startQuiz()"
+              >
+                Mulai Game
+              </button>
             </div>
           </div>
-          <div class="flex justify-center items-center mt-5">
-            <div>
-              <button
-                id="choice1"
-                class="px-[55px] py-[8px] rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[20px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110 mb-2 disabled:bg-gradient-to-t disabled:from-red-600 disabled:to-red-300 md:mx-2 animasi-scale"
-              ></button>
-              <button
-                id="choice2"
-                class="px-[55px] py-[8px] rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[20px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110 disabled:bg-gradient-to-t disabled:from-red-600 disabled:to-red-300 md:mx-2 animasi-scale"
-              ></button>
+          <div id="contentBody" style="display: none">
+            <div
+              class="flex justify-center items-center bg-slate-100 mx-auto w-[100%] md:w-[350px] h-[auto] pb-8 rounded-2xl mb-3 overflow-hidden md:border-4 md:border-blue-200 border-2 border-blue-200"
+            >
+              <div class="text-center">
+                <div class="flex justify-center items-center">
+                  <div
+                    class="w-[100%] h-[280px] md:h-[220px] overflow-hidden top-0 object-cover flex justify-center items-center"
+                  >
+                    <img
+                      id="image"
+                      src=""
+                      class="h-[100%] w-[100%] object-cover"
+                    />
+                  </div>
+                </div>
+                <div class="mb-1 flex mt-5 justify-center items-center">
+                  <span class="mr-1">level</span>
+                  <p id="level"></p>
+                </div>
+                <div
+                  class="text-center text-[18px] px-3 font-bold"
+                  id="question"
+                ></div>
+              </div>
             </div>
-            <p id="result"></p>
+            <div class="flex justify-center items-center mt-5">
+              <div>
+                <button
+                  id="choice1"
+                  class="px-[55px] py-[8px] rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[20px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110 mb-4 md:mb-0 disabled:bg-gradient-to-t disabled:from-red-600 disabled:to-red-300 md:mx-2 animasi-scale"
+                ></button>
+                <button
+                  id="choice2"
+                  class="px-[55px] py-[8px] rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[20px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110 disabled:bg-gradient-to-t disabled:from-red-600 disabled:to-red-300 md:mx-2 animasi-scale"
+                ></button>
+              </div>
+              <p id="result"></p>
+            </div>
           </div>
         </div>
       </div>
