--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <div class="modal-container" id="salah-modal">
       <div class="modal-content-container">
         <div class="flex justify-center items-center mb-2">
-          <img src="./img/bitmap.png" class="w-[80px]" />
+          <img src="./img/bitmap.png" class="w-[80px] mb-2" />
         </div>
-        <div class="mt-2">
+        <div class="mt-5">
           <img src="./img/salah.png" alt="" class="animasi-bounce2" />
         </div>
         <div class="block text-center">
