--- a/index.html
+++ b/index.html
@@ -108,7 +108,15 @@
         <div class="mt-2">
           <img src="./img/skor.png" alt="" class="animasi-bounce2" />
         </div>
-
+        <!-- Spinner -->
+        <div
+          id="loadingModal"
+          style="display: none"
+          class="text-[20px] font-bold text-black mt-[60px] md:mb-3"
+        >
+          <img src="./img/loading.png" class="w-[120px] animasi-scale" />
+        </div>
+        <!-- Batas Spinner -->
         <p id="skor" class="text-white font-black text-[60px]"></p>
         <div class="">
           <button
@@ -131,11 +139,21 @@
       >
         <div>
           <div class="flex justify-center items-center mb-2">
+            <!-- Start Content -->
             <div class="text-center">
               <img
                 src="./img/bitmap.png"
                 class="w-[105px] animasi-bounce2 mx-auto"
               />
+              <!-- Spinner -->
+              <div
+                id="loading"
+                style="display: none"
+                class="text-[20px] font-bold text-black mt-[60px]"
+              >
+                <img src="./img/loading.png" class="w-[120px] animasi-scale" />
+              </div>
+              <!-- Batas Spinner -->
               <button
                 id="start-button"
                 class="mt-[100px] px-[60px] py-[10px] rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[30px] md:text-[35px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110 mb-2 disabled:bg-gradient-to-t disabled:from-red-600 disabled:to-red-300 md:mx-2 animasi-scale"
@@ -145,9 +163,10 @@
               </button>
             </div>
           </div>
+          <!-- Body content -->
           <div id="contentBody" style="display: none">
             <div
-              class="flex justify-center items-center bg-slate-100 mx-auto w-[100%] md:w-[350px] h-[auto] pb-8 rounded-2xl mb-3 overflow-hidden md:border-4 md:border-blue-200 border-2 border-blue-200"
+              class="flex justify-center items-center bg-white mx-auto w-[100%] md:w-[350px] h-[auto] pb-8 rounded-2xl mb-3 overflow-hidden md:border-4 md:border-blue-200 border-2 border-blue-200"
             >
               <div class="text-center">
                 <div class="flex justify-center items-center">
@@ -157,7 +176,7 @@
                     <img
                       id="image"
                       src=""
-                      class="h-[100%] w-[100%] object-cover"
+                      class="h-[100%] w-[90%] object-cover pt-[20px] rounded-2xl"
                     />
                   </div>
                 </div>
