add petunjuk permainan

--- a/index.html
+++ b/index.html
@@ -98,6 +98,38 @@
       </div>
     </div>
 
+    <!-- petunjuk Modal -->
+    <div class="modal-container" id="petunjuk-modal">
+      <div class="modal-content-container">
+        <div class="text-center flex justify-center items-center">
+          <div class="px-3">
+            <div class="text-white font-black text-[25px] leading-9 w-[100%]">
+              Pentunjuk Permainan
+            </div>
+            <div
+              class="overflow-y-auto w-[350px] md:w-[400px] h-[auto] bg-white p-5 rounded-xl my-[10px] mx-auto mt-5"
+            >
+              <div style="text-align: center">
+                Jika jawaban kamu <strong>salah</strong> maka kamu harus belajar
+                terlebih dahulu. Jika jawaban kamu benar maka kamu melanjutkan
+                ke level selanjutnya.
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="block text-center">
+          <div>
+            <button
+              onclick="petunjukModalClose()"
+              class="px-[55px] py-[8px] rounded-full shadow-md shadow-slate-900 border-4 border-slate-300 text-dark font-black text-[20px] bg-white transform transition-all duration-150 hover:scale-110 mb-2"
+            >
+              Kembali
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- end Modal -->
 
     <div class="modal-container" id="end-modal">
@@ -154,13 +186,23 @@
                 <img src="./img/loading.png" class="w-[120px] animasi-scale" />
               </div>
               <!-- Batas Spinner -->
-              <button
-                id="start-button"
-                class="mt-[100px] px-[60px] py-[10px] rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[30px] md:text-[35px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110 mb-2 disabled:bg-gradient-to-t disabled:from-red-600 disabled:to-red-300 md:mx-2 animasi-scale"
-                onclick="startQuiz()"
-              >
-                Mulai Game
-              </button>
+
+              <div class="grid">
+                <button
+                  id="start-button"
+                  class="mt-[90px] px-[60px] py-[10px] rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[30px] md:text-[35px] bg-gradient-to-t from-green-600 to-lime-300 transform transition-all duration-150 hover:scale-110 disabled:bg-gradient-to-t disabled:from-red-600 disabled:to-red-300 md:mx-2 animasi-scale"
+                  onclick="startQuiz()"
+                >
+                  Mulai Game
+                </button>
+                <button
+                  id="petunjuk-button"
+                  class="mt-[20px] px-[35px] py-[10px] rounded-full shadow-md shadow-slate-900 border-4 border-white text-white font-black text-[20px] md:text-[22px] bg-gradient-to-t from-orange-600 to-yellow-300 transform transition-all duration-150 hover:scale-110 disabled:bg-gradient-to-t disabled:from-red-600 disabled:to-red-300 md:mx-2 animasi-scale"
+                  onclick="petunjukModal()"
+                >
+                  Petunjuk Permainan
+                </button>
+              </div>
             </div>
           </div>
           <!-- Body content -->
